# justified_perspective_model

./: .gitignore  Apptainer.demo_jpm_cpp  EPDDL_TO_FPDDL_WORKFLOW.md  README.md  Untitled-1.ipynb  bfs_ratio_generated.json  experiment_runner.py  instance_runner.py  old_epistemic_model.py  pddl_model.py  pddl_parser.py  pyproject.toml  pytest.ini  search.py
benchmarks/: new_corridor.txt
benchmarks/bbl/: bbl.py  problem01.pddl  problem02.pddl  problem03.pddl  problem04.pddl  visibility.cpp  visibility.json
benchmarks/coin/: coin.py  domain.pddl  problem_01.pddl  problem_02.pddl  problem_03.pddl  problem_04.pddl  problem_05.pddl  problem_06.pddl  problem_07.pddl  visibility.cpp  visibility.json
benchmarks/config/: cpp_python_comparison_smoke.yaml  cpp_python_full_comparison.yaml  full.yaml  simple.yaml  simple_new_corridor.yaml
benchmarks/corridor/: corridor.py  problem03_7ag_2g_1d.pddl  problem05_5ag_2g_3d.pddl  problem06_7ag_2g_3d.pddl  problem08_5ag_2g_5d.pddl  visibility.cpp  visibility.json
benchmarks/gossip4/: gossip.py  problem_01.pddl  problem_02.pddl  visibility.cpp  visibility.json
benchmarks/grapevine/: grapevine.py  problem01_4ag_2g_1d.pddl  problem02_4ag_2g_2d.pddl  problem03_4ag_4g_1d.pddl  problem04_4ag_4g_2d.pddl  problem05_4ag_8g_1d.pddl  problem06_4ag_8g_2d.pddl  problem10_8ag_4g_2d.pddl  problem11_8ag_8g_1d.pddl  problem12_8ag_8g_2d.pddl  visibility.cpp  visibility.json
benchmarks/grid/: grid.py  problem_BlockCells_prob1.pddl  problem_BlockCells_prob2.pddl  problem_BlockCells_prob3.pddl  problem_BlockCells_prob4.pddl  problem_Broadcast_prob1.pddl  problem_Broadcast_prob2.pddl  problem_Broadcast_prob3.pddl  problem_Broadcast_prob4.pddl  problem_EpGoal_prob3.pddl  problem_EpGoal_prob4.pddl  problem_NonBroadcast_prob2.pddl  problem_NonBroadcast_prob4.pddl  problem_NonEp_prob1.pddl  problem_NonEp_prob3.pddl  visibility.cpp  visibility.json
benchmarks/grid_backup/: grid.py  problem_NonEp_prob1.pddl  visibility.cpp  visibility.json
benchmarks/muddy_children/: domain.pddl  muddy_children.py  problem01.pddl  problem02.pddl  visibility.cpp  visibility.json
benchmarks/new_corridor/: domain.pddl  new_corridor.py  problem01_3ag_2g_1d.pddl  visibility.cpp  (+6 more)
converted_from_epddl/: README.md  manifest.json  plan_validation_summary.json  solver_results.json
cpp/: CMakeLists.txt  CPP_PYTHON_FULL_COMPARISON_RESULTS.md  GREEDY_BFSDCU_30S_RESULTS.md  OLD_BENCHMARK_RESULTS.md  README.md
cpp/include/jpm/: evaluator.hpp  json.hpp  search.hpp  search_algorithm.hpp  search_option_utils.hpp  search_support.hpp  task.hpp  transition.hpp  visibility.hpp
cpp/src/: evaluator.cpp  jpm_cpp_solver.cpp  search.cpp  search_algorithm.cpp  search_support.cpp  task.cpp  task_loader.cpp  transition.cpp  visibility.cpp
cpp/src/search_algorithms/: acps.cpp  astar.cpp  beam_search.cpp  best_first.cpp  bfs.cpp  bfsdc.cpp  bfsdcu.cpp  cabs.cpp  cbfs.cpp  greedy.cpp  lnbs.cpp
docker/: docker_config  requirements.txt
jp/: __init__.py  benchmark_config.py  benchmark_runner.py  epistemic_model.py  experiment_runner.py  forward_epistemic_model.py  forward_pddl_model.py  instance_runner.py  pddl_model.py  pddl_parser.py  search.py  search_algorithm_config.py  search_core.py  server_runner.py  util.py
pdkb_results/: pdkb_results.md  run_all_experiments.py
scripts/: Planning-with-Multi-Agent-Belief-Using-Justified-Perspective.bib  bfs_ratio_generator.py  general_fig_generator.py  jair_results.ipynb  job_index_generator.py  job_record_generator.py  mdb_query.py  mdb_rerun.py  specific_fig_generator.py  temp.py
tests/: conftest.py  test_actions.py  test_pddl_parser.py  test_performance.py  test_planner.py  test_properties.py  test_queries.py  test_states.py
tools/: check_benchmark_regressions.py  convert_epddl_benchmarks.py  evaluate_converted_from_epddl.py  export_jpm_ir.py  plank_json_to_fpddl.py  render_cpp_python_comparison_markdown.py  run_cpp_python_comparison.py  run_epddl_jpm_planner.py  run_jpm_cpp_solver.py
utils/: quick_validator.sh  visualize_results.py
(+465 files in other folders)
