[project]
name = "justified-perspective-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hypothesis>=6.152.4",
    "numpy>=2.4.4",
    "pytest>=9.0.3",
    "pytz>=2026.1.post1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "hypothesis>=6.0",
]
